[package]
name = "axum-security"
version = "0.0.1"
edition = "2024"
authors = ["Joey de Waal <dewaaljoey@gmail.com>"]
license = "MIT"
readme = "../README.md"
description = "A security toolbox for the Axum library"
repository = "https://github.com/joeydewaal/axum-security/"
documentation = "https://docs.rs/axum-security"
keywords = ["security", "axum", "http", "cookie", "jwt"]
categories = ["web-programming", "security", "asynchronous"]


[package.metadata.docs.rs]
features = ["cookie", "jwt", "oauth2", "rbac", "headers", "jiff", "chrono", "time"]

[features]
cookie = ["dep:cookie-monster", "dep:uuid"]
jwt = ["dep:jsonwebtoken"]
oauth2 = ["dep:oauth2", "cookie"]
rbac = ["dep:axum-security-macros"]
headers = ["dep:pin-project-lite"]

jiff = ["cookie-monster?/jiff"]
chrono = ["cookie-monster?/chrono"]
time = ["cookie-monster?/time"]


[dependencies]
axum = { workspace = true, features = ["query"] }
http.workspace = true
tokio.workspace = true
tower.workspace = true

tracing.workspace = true
pin-project-lite = { workspace = true, optional = true }

cookie-monster = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"], optional = true }
oauth2 = { workspace = true, features = ["reqwest", "rustls-tls"], optional = true }

axum-security-macros = { path = "../axum-security-macros", version = "0.0.1", optional = true }

uuid = { workspace = true, features = ["v7"], optional = true }
serde.workspace = true

