[package]
name = "jwt-cookie"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-security = { path = "../../axum-security", features = ["jiff", "jwt", "cookie"] }
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8.8", features = [] }
jiff = { version = "0.2.18", features = ["serde"] }

serde = { version = "1.0.228", features = ["derive"] }
