[package]
name = "oauth2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-security = { path = "../../axum-security", features = ["jiff", "oauth2", "cookie"] }
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8.8", features = [] }
jiff = { version = "0.2.18", features = ["serde"] }

reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
