[package]
name = "rbac"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-security = { path = "../../axum-security", features = ["jiff", "oauth2", "cookie", "rbac"] }
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8.8", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
